Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19574

Cannot show tooltip of global struct

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 4.12.0-rc1
    • Qt Creator 4.5.0-beta1
    • Debugger
    • e0e5334d836ee75c2785221ee9f2fd4fdf72fea8 (qt-creator/qt-creator/4.12)

      When hoovering over a global struct, only its adress is shown. I attached a small CMake example and attached a patch that adds the variable to "Expressions" when hoovering over the variable, but this should not be the final solution.

       

        1. tooltp.7z
          5 kB
          reinerhohn
        For Gerrit Dashboard: QTCREATORBUG-19574
        # Subject Branch Project Status CR V

            hjk hjk
            reinerhohn reinerhohn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes